--- a/website/wp-content/themes/Cairo-Jazz-Club/sass/override/_website.scss
+++ b/website/wp-content/themes/Cairo-Jazz-Club/sass/override/_website.scss
@@ -5,47 +5,50 @@
  *******************************************/
 
 .admin-bar #masthead {
-	top: 32px;
+    top: 32px;
 }
 
 @media screen and (max-width: 783px) {
-	.admin-bar #masthead {
-		top: 46px;
-	}
+    .admin-bar #masthead {
+        top: 46px;
+    }
 }
 
 @media screen and (max-width: 600px) {
-	.admin-bar #masthead {
-		top: 0px;
-	}
-	#wpadminbar {
-		top: -44px;
-		z-index: 999;
-	}
+    .admin-bar #masthead {
+        top: 0px;
+    }
+    #wpadminbar {
+        top: -44px;
+        z-index: 999;
+    }
 }
 
 #masthead {
-	z-index: 1000;
+    z-index: 1000;
 }
+
 
 /*******************************************
  *	removes the space above the content
  *******************************************/
 
 .hentry {
-	margin: 0;
+    margin: 0;
 }
 
-.entry-content, .entry-summary {
-	margin: 0;
+.entry-content,
+.entry-summary {
+    margin: 0;
 }
 
-.eg-text-and-image-nostyle-element-10 > div {
-	width: 30%;
-	height: 100%;
-	float: left;
-	background-size: cover;
+.eg-text-and-image-nostyle-element-10>div {
+    width: 30%;
+    height: 100%;
+    float: left;
+    background-size: cover;
 }
+
 
 /**************************************************
  *	fix magnific popup conflixt bug with scrolling
@@ -53,4 +56,28 @@
 
 .hide-horizontal-scrollbar {
     overflow-x: hidden !important;
+}
+
+
+/*********************************
+ *	Artist modal (Small Screens)
+**********************************/
+
+@media screen and (max-width: 768px) {
+    .media-box__img {
+        margin-right: 1rem;
+    }
+    .media-box__content {
+        float: none;
+        width: inherit;
+        margin-top: 2.5rem;
+    }
+    .modal-head .media-box {
+        margin-left: 0px;
+        margin-top: 10px;
+    }
+    .modal-head__title {
+        width: inherit !important;
+        font-size: 2.5rem !important;
+    }
 }
